# deep-dive

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  renovate.json
.github/workflows/: bump-version.yml  ci.yml  release.yml  renovate.yml
benches/: comparer.rs
docs/: architecture.md  plan.md
src/: cli.rs  config.rs  lib.rs  main.rs  utils.rs
src/analysis/: archive.rs  comparer.rs  filetree.rs  mod.rs  report.rs
src/analysis/analyzers/: efficiency.rs  layer_stats.rs  mod.rs  shaded.rs
src/image/: mod.rs  progress.rs  registry.rs  resolver.rs
src/image/docker/: archive.rs  engine.rs  mod.rs
src/image/oci/: layout.rs  mod.rs
src/image/podman/: resolver.rs
src/tui/: app.rs  loader.rs  mod.rs  state.rs
src/tui/widgets/: file_tree.rs  filter.rs  image_details.rs  layer_details.rs  layer_list.rs  loading.rs  mod.rs  modal.rs  status_bar.rs
