[package]
name = "deep-dive"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/dmikusa/deep-dive"
description = "A fast, terminal-based explorer for Docker and OCI image layers."
homepage = "https://github.com/dmikusa/deep-dive"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
bollard = "0.21"
oci-client = "0.17"
oci-spec = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
flate2 = "1"
zstd = "0.13"
tar = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
sha2 = "0.10"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
regex = "1"
bitflags = "2"
async-trait = "0.1"
futures = "0.3"
arboard = "3"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
assert_fs = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "comparer"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
